force-app/main/default/objects/Gamer__c/Gamer__c.object-meta.xml
<CustomObject>
    <label>Gamer</label>
    <nameField>
        <label>Gamer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gamers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>