force-app/main/default/objects/Gamer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Provide an email for communication or account linking.</description>
    <inlineHelpText>Provide an email for communication or account linking.</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>