force-app/main/default/objects/Gamer__c/fields/Gamer_ID__c.field-meta.xml
<CustomField>
    <fullName>Gamer_ID__c</fullName>
    <description>The unique identifier assigned to each gamer.</description>
    <displayFormat>GAMER-{0000}</displayFormat>
    <inlineHelpText>The unique identifier assigned to each gamer.</inlineHelpText>
    <label>Gamer ID</label>
    <type>AutoNumber</type>
</CustomField>