force-app/main/default/objects/Gamer__c/fields/Join_Date__c.field-meta.xml
<CustomField>
    <fullName>Join_Date__c</fullName>
    <description>The day user joined. Used to track when the gamer started.</description>
    <inlineHelpText>The day user joined.</inlineHelpText>
    <label>Join Date</label>
    <type>DateTime</type>
</CustomField>